--- a/index.html
+++ b/index.html
@@ -24,10 +24,18 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <h1> Akash Kumar Singh Portfolio </h1>
  <h2>I'm a Senior Software Engineer</h2>
  <hr>
- <h3><a href="#test">Movie Ranking Project</a></h3>
+ <h3>My Projects</h3>
+ <ol>
+	<li><a href="../2.4 Movie Ranking Project/">2.4 Movie Ranking Project</a></li>
+	<li><a href="../3.0 List Elements/">3.0 List Elements</a></li>
+	<li><a href="../3.1 Nesting and Indentation/">3.1 Nesting and Indentation</a></li>
+	<li><a href="../4.3 HTML Porfolio Project/">4.3 HTML Porfolio Project</a></li>
+
+ </ol>
+ <!-- <h3><a href="#test">Movie Ranking Project</a></h3>
  <img src="./assets/images/movie-ranking.png" height="200px" alt="Movie Ranking Projects" >
  <h3><a href="#test">Birthday Invite Project</a></h3>
  <img src="./assets/images/birthday-invite.png" height="200px" alt="Birthday Invite Projects" >
- 
+  -->
 </body>
 </html>
