--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
  <hr>
  <h3>My Projects</h3>
  <ol>
-	<li><a href="../2.4 Movie Ranking Project/">2.4 Movie Ranking Project</a></li>
-	<li><a href="../3.0 List Elements/">3.0 List Elements</a></li>
-	<li><a href="../3.1 Nesting and Indentation/">3.1 Nesting and Indentation</a></li>
-	<li><a href="../4.3 HTML Porfolio Project/">4.3 HTML Porfolio Project</a></li>
+	<li><a href="../2.4 Movie Ranking Project/index.html">2.4 Movie Ranking Project</a></li>
+	<li><a href="../3.0 List Elements/index.html">3.0 List Elements</a></li>
+	<li><a href="../3.1 Nesting and Indentation/index.html">3.1 Nesting and Indentation</a></li>
+	<li><a href="../4.3 HTML Porfolio Project/index.html">4.3 HTML Porfolio Project</a></li>
 
  </ol>
  <!-- <h3><a href="#test">Movie Ranking Project</a></h3>
